[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/background/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scripts/locales.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -640.0
margin_top = -355.0
margin_right = 640.0
margin_bottom = 365.0
mouse_filter = 0
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Logo" type="TextureRect" parent="."]
margin_left = -226.0
margin_top = -264.0
margin_right = 229.0
margin_bottom = -70.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="PlayButton" type="Button" parent="."]
margin_left = -156.0
margin_top = -14.0
margin_right = 154.0
margin_bottom = 85.0
text = "buttons/play"

[node name="QuitButton" type="Button" parent="."]
margin_left = -154.0
margin_top = 211.0
margin_right = 156.0
margin_bottom = 310.0
text = "buttons/quit"

[node name="Locales" type="Node" parent="."]
script = ExtResource( 3 )

[node name="LanguageButton" type="MenuButton" parent="."]
margin_left = -155.0
margin_top = 99.0
margin_right = 152.0
margin_bottom = 198.0
text = "buttons/select_language"
flat = false
switch_on_hover = true

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
